--- a/css/Index.css
+++ b/css/Index.css
@@ -236,18 +236,13 @@ font-size: 1.5rem;
 }
 .ayuda2 {
   position: absolute;
-  width: 179px;
-  height: 30px;
-  left: 23px;
-  top: 589px;
-  
-  
   font-style: 'Poppins';
-  font-weight: 700;
-  font-size: 3rem;
+  font-weight: 600;
+  width: 99.4px;
+  height: 28px;
+  left: 11rem;
   
   
   color: #000000;
   
-  opacity: 0.6;
 }
